# Wraith

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  wraith.ini  wraith.manifest
.cargo/: config.toml
.github/workflows/: build.yml
docs/: ADR.md  DOMAIN.md  ISSUES.md  PRD.md  SKILLS.md  TESTS.md
docs/adr/: 0001-rust-over-cpp-go.md  0002-windows-sys-over-windows-crate.md  0003-global-atomics-over-mutex.md  0004-postmessagew-from-hooks.md  0005-panic-abort-in-release.md  0006-no-async-runtime.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
installer/: wraith.nsi
src/: app.rs  autostart.rs  config.rs  hooks.rs  main.rs  resource.rc  tray.rs  updater.rs
