[package]
name        = "wraith"
version     = "1.0.0"
edition     = "2021"
authors     = ["nightraven"]
description = "Physical input blocker — passes synthetic AI input, blocks hardware"
repository  = "https://github.com/nightraven/wraith"
license     = "MIT"

[[bin]]
name = "wraith"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Networking_WinHttp",
    "Win32_Security",
] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
